# jsk_mbzirc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.md~  husky.patch  install.sh  mbzirc.rosinstall  package.xml  readme.txt  setup.sh  setup.sh~
jsk_mbzirc/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_mbzirc_common/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
jsk_mbzirc_common/gazebo_model/models/arena/: model.config
jsk_mbzirc_common/gazebo_model/models/arena_old/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/large_object/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/pad/: model.config
jsk_mbzirc_common/gazebo_model/models/panel/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/small_cylinder/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/small_rectangle/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/start/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/stem/: model.config
jsk_mbzirc_common/gazebo_model/models/truck/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/uav/: quadrotor.gazebo.xacro  quadrotor_with_hokyo30lx_and_downward_cam.urdf.xacro
jsk_mbzirc_common/gazebo_model/models/wrench10/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench11/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench12/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench13/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench14/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench15/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench16/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench17/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench18/: model.config  model.sdf
jsk_mbzirc_common/gazebo_model/models/wrench19/: model.config  (+1 more)
jsk_mbzirc_common/gazebo_model/world/: mbzirc_arena.world  mbzirc_arena_old.world  mbzirc_arena_task_1.world  mbzirc_arena_task_2.world  mbzirc_arena_task_3.world
jsk_mbzirc_common/include/jsk_mbzirc_common/: mbzirc_gazebo_drone_additional_plugin.h  mbzirc_gazebo_gimbal_plugin.h  mbzirc_gazebo_panel_plugin.h  mbzirc_gazebo_treasure_plugin.h  mbzirc_gazebo_truck_plugin.h
jsk_mbzirc_common/launch/: hrp2018_rosbag_play.launch  hrp2018_rosbag_record.launch  mbzirc_arena.launch  mbzirc_arena_1.launch  mbzirc_arena_2.launch  mbzirc_arena_3.launch  mbzirc_task_1.launch  mbzirc_task_2.launch  mbzirc_task_3.launch
jsk_mbzirc_common/rviz_cfg/: task1.rviz
jsk_mbzirc_common/src/: mbzirc_gazebo_drone_additional_plugin.cpp  mbzirc_gazebo_gimbal_plugin.cpp  mbzirc_gazebo_panel_plugin.cpp  mbzirc_gazebo_treasure_plugin.cpp  mbzirc_gazebo_truck_plugin.cpp  mbzirc_gazebo_uav_collision_rule_plugin.cpp  uav_teleop_keyboard.cpp
jsk_mbzirc_common/urdf/: truck.urdf.xacro
jsk_mbzirc_common/urdf/drone/: additional.xacro
jsk_mbzirc_common/urdf/gimbal/: gimbal.xacro
jsk_mbzirc_tasks/: CHANGELOG.rst  CMakeLists.txt  package.xml
jsk_mbzirc_tasks/config/: control_ur5.yaml  task1.rviz  task2.rviz  task3.rviz
jsk_mbzirc_tasks/data/: negative.txt  positive.txt  svm.xml
jsk_mbzirc_tasks/include/jsk_mbzirc_tasks/: CMT.h  histogram_of_oriented_gradients.h  keypoint_classifier.h  mbzirc_gazebo_gimbal_plugin.h  mbzirc_gazebo_uav_collision_rule_plugin.h  mbzirc_gazebo_uav_state_display_plugin.h  track_region_extractor.h~  uav_detect_landing_region.h  uav_detect_landing_region_trainer.h  uav_self_filter.h  uav_self_filter.h~  uav_tracking.h
jsk_mbzirc_tasks/launch/: jsk_mbzirc_task_1.launch  jsk_mbzirc_task_2.launch  jsk_mbzirc_task_3.launch  test_husky_control.launch  test_husky_control.perspective  uav_detect_landing_region.launch  uav_self_filter.launch  uav_self_filter.launch~  uav_tracking.launch
jsk_mbzirc_tasks/script/: annotate_dataset_image.py  non_maximum_suppression.py  relay_field_728  relay_field_728.py  roslaunch-check.py  task_1_cheat.py  task_2_cheat.py  track_region_mapping.py  track_region_segmentation.py
jsk_mbzirc_tasks/src/: #histogram_of_oriented_gradients.cpp#  histogram_of_oriented_gradients.cpp  keypoint_classifier.cpp  mbzirc_gazebo_gimbal_plugin.cpp  mbzirc_gazebo_uav_collision_rule_plugin.cpp  mbzirc_gazebo_uav_state_display_plugin.cpp  track_region_extractor_node.cpp~  uav_detect_landing_region_node.cpp  uav_detect_landing_region_trainer.cpp  uav_img2pointcloud.cpp  uav_img2pointcloud.cu  uav_self_filter_node.cpp  uav_self_filter_node.cpp~
jsk_mbzirc_tasks/src/img2pointcloud/: uav_img2pointcloud.cpp  uav_img2pointcloud.cu
jsk_mbzirc_tasks/src/teleop/: uav_teleop_joy.cpp  uav_teleop_keyboard.cpp
jsk_mbzirc_tasks/src/tracking/: CMT.cpp  uav_tracking_node.cpp
jsk_mbzirc_tasks/srv/: NonMaximumSuppression.srv
jsk_mbzirc_tasks/test/: check_mission.py  jsk_mbzirc_task_1.test  jsk_mbzirc_task_2.test
jsk_mbzirc_tasks/urdf/: hawk.urdf.xacro  husky_with_camera.urdf.xacro  quadrotor_with_gimbal_downward_cam.urdf.xacro  quadrotor_with_hokyo30lx_and_downward_cam.urdf.xacro  uav.urdf.xacro
jsk_mbzirc_tasks/urdf/gimbal/: gimbal.xacro
mbzirc/: CHANGELOG.rst  CMakeLists.txt  package.xml  package.xml~
netusb_camera_driver/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
netusb_camera_driver/cfg/: NETUSBCamera.cfg
netusb_camera_driver/cmake/: FindNETUSBCAM.cmake  Findudev.cmake  download_netusbcam.py
netusb_camera_driver/config/: camera_gui.perspective
netusb_camera_driver/include/netusb_camera_driver/: NETUSBCamera.h  exceptions.h  netusb_camera_nodelet.h
netusb_camera_driver/launch/: camera.launch  sample.launch
netusb_camera_driver/src/: NETUSBCamera.cpp  netusb_camera_node.cpp  netusb_camera_nodelet.cpp
netusb_camera_driver/udev/: 99-netusbcam.rules
task_ugv_2/jsk_mbzirc_ugv_sim/: CMakeLists.txt  CMakeLists.txt~  package.xml
task_ugv_2/jsk_mbzirc_ugv_sim/config/: control_ur5.yaml
task_ugv_2/jsk_mbzirc_ugv_sim/launch/: husky_mbzirc.launch
task_ugv_2/jsk_mbzirc_ugv_sim/src/: ugv_teleop_keyboard.cpp
(+51 files in other folders)
