<package>
  <name>jsk_mbzirc</name>
  <version>1.0.1</version>
  <description>
      Software of JSK lab in mbzirc challenge.
  </description>

  <maintainer email="bakui@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">Xiangyu Chen</maintainer>
  <maintainer email="krish@jsk.imi.i.u-tokyo.ac.jp">Chaudhary Krishneel Chand</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!--   jsk_mbzirc_common-->
  <run_depend>jsk_mbzirc_common</run_depend>
  <run_depend>jsk_mbzirc_tasks</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
