<?xml version="1.0"?>
<package>
  <name>jsk_mbzirc_common</name>
  <version>0.0.0</version>
  <description>The jsk_mbzirc_common package</description>

  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">xychen at jsk</maintainer>
  <maintainer email="bakui@jsk.imi.i.u-tokyo.ac.jp">zhao  at jsk</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>
  <!--   temporary, will appear to jsk package later on -->
  <url type="repository">https://github.com/tongtybj/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>hector_quadrotor_demo</run_depend>


  <run_depend>husky_gazebo</run_depend>  
  <run_depend>husky_ur5_moveit_config</run_depend> 
  <run_depend>husky_control</run_depend> 
  <run_depend>universal_robot</run_depend> 
  <run_depend>husky_robot</run_depend> 
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_model/models" />
  </export>
</package>
