<?xml version="1.0"?>
<package>
  <name>jsk_mbzirc_common</name>
  <version>1.0.1</version>
  <description>The jsk_mbzirc_common package</description>

  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>
  <maintainer email="bakui@jsk.imi.i.u-tokyo.ac.jp">Xiangyu Chen</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/gazebo_model/models" />
  </export>
</package>
