<?xml version="1.0"?>
<package>
  <name>jsk_mbzirc_tasks</name>
  <version>0.0.0</version>
  <description>The jsk_mbzirc_tasks package</description>

  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">xychen at jsk</maintainer>
  <maintainer email="bakui@jsk.imi.i.u-tokyo.ac.jp">zhao  at jsk</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>
  <!--   temporary, will appear to jsk package later on -->
  <url type="repository">https://github.com/tongtybj/mbzirc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>jsk_mbzirc_common</build_depend>
  <run_depend>jsk_mbzirc_common</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
