<?xml version="1.0"?>
<package>
  <name>jsk_mbzirc_tasks</name>
  <version>1.0.1</version>
  <description>The jsk_mbzirc_tasks package</description>

  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">Xiangyu Chen</maintainer>
  <maintainer email="bakui@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>jsk_mbzirc_common</build_depend>

  <run_depend>jsk_mbzirc_common</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>

  <run_depend>hector_quadrotor_gazebo</run_depend>
  <run_depend>husky_gazebo</run_depend>
  <run_depend>husky_ur5_moveit_config</run_depend>

  <run_depend>moveit_commander</run_depend>

  <run_depend>rviz</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
