<package>
  <name>mbzirc</name>
  <version>1.0.0</version>
  <description>
      Software of JSK lab in mbzirc challenge.
  </description>

  <maintainer email="bakui@jsk.imi.i.u-tokyo.ac.jp">zhao  at jsk</maintainer>
  <maintainer email="xychen@jsk.imi.i.u-tokyo.ac.jp">xychen at jsk</maintainer>
  <maintainer email="krish@jsk.imi.i.u-tokyo.ac.jp">krish at jsk</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>


  <buildtool_depend>catkin</buildtool_depend>
  <!--   jsk_mbzirc_common-->
  <run_depend>jsk_mbzirc_common</run_depend>

  <!--   uav task1 -->

  <!--   ugv task2 -->
  <run_depend>jsk_mbzirc_ugv_sim</run_depend>
  	<!--   husky related -->
  	<run_depend>husky_desktop</run_depend>
  	<run_depend>husky_robot</run_depend>
  	<run_depend>husky_simulator</run_depend>
  	<run_depend>husky_customization</run_depend>
  	<run_depend>husky_description</run_depend>
	<run_depend>husky_control</run_depend>
	<run_depend>husky_msgs</run_depend>
	<run_depend>husky_navigation</run_depend>
	<run_depend>husky_ur5_moveit_config</run_depend>
	<!--   ur5 related -->
	<run_depend>universal_robot</run_depend>
  <!--   uav task3 -->


  <export>
    <metapackage/>
  </export>
</package>
